fixed layout issue on form

--- a/public/stylesheets/sass/scenarios.sass
+++ b/public/stylesheets/sass/scenarios.sass
@@ -84,11 +84,12 @@ body#scenarios_new, body#scenarios_create
             float: left
             width: 60px
             padding: 5px
+            text-align: right
           input
             display: block
             float: left
             padding: 5px
-            width: 200px
+            width: 270px
             margin: 4px
           input[type=submit]  
             margin-left: 74px
